--- a/src/components/Navigation/NavSubGrid/NavSubGrid.css
+++ b/src/components/Navigation/NavSubGrid/NavSubGrid.css
@@ -20,10 +20,9 @@
 
 .nav__sub-grid .content {
   width: 90%;
-  max-width: 1030px;
   display: grid;
   grid-template-columns: repeat(3, minmax(300px, 1fr));
   column-gap: 20px;
-  row-gap: 43px;
+  row-gap: 10px;
   padding: 10px 0;
 }
